--- a/lib/estilos.css
+++ b/lib/estilos.css
@@ -121,29 +121,6 @@ ul ul a {
     background: #6d7fcc;
 }
 
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
-}
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -187,6 +164,10 @@ a.article:hover {
 /* ---------------------------------------------------
     DIVERSOS
 ----------------------------------------------------- */
+
+button:disabled{
+  pointer-events: none;
+}
 
 .kuster-logo{
   width: 100%;
