Update 1.1 (fix modal scroling, add button delete serviço)

--- a/lib/style.css
+++ b/lib/style.css
@@ -165,6 +165,10 @@ ul ul a {
     DIVERSOS
 ----------------------------------------------------- */
 
+.modal {
+  overflow-y: auto !important;
+}
+
 button:disabled{
   pointer-events: none;
 }
