--- a/lib/estilo.css
+++ b/lib/estilo.css
@@ -25,12 +25,13 @@ a:focus {
 }
 
 .navbar {
-    padding: 15px 10px;
+    padding: 5px 0px;
     background: #fff;
     border: none;
     border-radius: 0;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
 }
 
 .navbar-btn {
