--- a/lib/estilos.css
+++ b/lib/estilos.css
@@ -256,3 +256,32 @@ button:disabled{
 #img-profile {
     font-size: 40px;
 }
+
+/* ---------------------------------------------------
+    LOGIN-ADM
+----------------------------------------------------- */
+
+#login .container #login-row #login-column #login-box {
+  margin-top: 120px;
+  max-width: 600px;
+  height: 320px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 20px;
+}
+#login .container #login-row #login-column #login-box #login-form #register-link {
+  margin-top: -85px;
+}
+
+#register .container #register-row #register-column #register-box {
+  margin-top: 120px;
+  max-width: 600px;
+  height: 500px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+#register .container #register-row #register-column #register-box #register-form {
+  padding: 20px;
+}
